# vtb_app_api

./: .gitignore  README.md  app.db  main.py  project_overview.md  pyproject.toml  test.db
app/api/v1/: __init__.py
app/api/v1/endpoints/: aggregator.py  auth.py  cards.py  data.py  payments.py  products.py
app/auth_manager/: README.md  dependencies.py  exceptions.py  schemas.py  services.py
app/banks/: abank_client.py  base_client.py  sbank_client.py  vbank_client.py
app/banks/services/: base_service.py
app/banks/services/accounts/: abank.py  base.py  sbank.py  vbank.py
app/banks/services/cards/: abank.py  base.py  sbank.py  vbank.py
app/banks/services/payments/: abank.py  base.py  sbank.py  vbank.py
app/banks/services/products/: abank.py  base.py  sbank.py  vbank.py
app/core/: config.py
app/db/: crud.py  database.py  models.py
app/docs/: Awesome Bank API - Swagger UI.mhtml  Smart Bank API - Swagger UI.mhtml  Virtual Bank API - Swagger UI.mhtml
app/gateways/: gost_client.py
app/llm_integration/: router.py  schemas.py  services.py  tools.py
app/mcp/: dependencies.py  router.py  schemas.py  services.py
app/public_ai_adapter/: README.md  dependencies.py  router.py  schemas.py  security.py  services.py
app/schemas/: account.py  card.py  payment.py  product.py
app/security/: encryption.py
app/ui_connector/: README.md  router.py  schemas.py  services.py
app/utils/: bank_clients.py
tests/: conftest.py  test_abank_accounts_api.py  test_abank_payments_api.py  test_abank_products_api.py  test_llm_integration_module.py  test_mcp_module.py  test_products_api.py  test_public_ai_adapter.py  test_sbank_accounts_api.py  test_sbank_payments_api.py  test_sbank_products_api.py  test_ui_connector_module.py  test_vbank_accounts_api.py  test_vbank_payments_api.py
ui/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package.json  types.ts
ui/components/: Assistant.tsx  BottomNav.tsx  CardsPage.tsx  CashbackRadar.tsx  ConnectBanksPage.tsx  Dashboard.tsx  FinancialHealth.tsx  GeminiAssistant.tsx  Header.tsx  HistoryPage.tsx  LoginPage.tsx  NightSafe.tsx  PaymentsPage.tsx  Sidebar.tsx  SmartBudgeting.tsx  SmartDebiting.tsx  SmartExchange.tsx  SmartLoanPayments.tsx  SmartSubscriptions.tsx  SubscriptionMarketplace.tsx  TrustPlatform.tsx  VBankPay.tsx
ui/components/shared/: Card.tsx  Spinner.tsx
ui/services/: financialService.ts
