[project]
name = "vtb-app-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.8",
    "pydantic-settings",
    "httpx",
    "python-jose[cryptography]",
    "SQLAlchemy",
    "cryptography",
    "psycopg2-binary", # For PostgreSQL
    "pydantic[email]",
    "click",
    "h11",
    "starlette",
    "annotated-doc",
    "python-dotenv",
    "httpcore",
    "typing-extensions",
    "pydantic-core",
    "typing-inspection",
    "annotated-types",
    "anyio",
    "sniffio",
    "idna",
    "cffi",
]
